force-app/main/default/objects/Order/fields/Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount__c</fullName>
    <label>Advance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>