force-app/main/default/objects/Order/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>TotalAmount  -  Advance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>