force-app/main/default/objects/Order/recordTypes/Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order</fullName>
    <active>true</active>
    <label>Purchase Order</label>
</RecordType>